# ec_numbers_prediction

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_pypi.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: publish.yml
benchmark_computational_resources/: benchmark_computational_resources.py  benchmark_results.csv  benchmarks_creation.ipynb  predictions.csv  test_100.fasta  test_1000.fasta  test_25.fasta
data/: plants_sm_sequences.fasta  plants_test_data.csv  protein.faa  test.fasta  test_data.csv
notebooks/: 0.1-make_predictions_for_all_models.ipynb  1-general_results.ipynb  analysis_on_ec_numbers.ipynb  f1_score_per_ec_results.csv  f1_score_per_ec_results_2.csv  f1_score_per_ec_results_3.csv  make_predictions_for_all_models.ipynb  metric_values.csv  statistical_significances_by_level.csv  statistical_significant_identity_thresholds.csv  supplementary_tables.xlsx
notebooks/0.2-test_ensembles/: 0.2-test_ensembles.ipynb  results_models_ensemble2.csv
notebooks/2-identity_intervals/: 2-analyse_results_for_identity_intervals.ipynb  less_studied_results.csv
notebooks/3-test_hierarchical_prediction/: 3-test_consistent_predictions.ipynb
pipeline/: optimize_dnn.py  run_data_processing.py  run_f1_scores_for_labels_models.py  train_baselines.py  train_deep_ec.py  train_dspace.py  train_final_models_for_uniref90_splits.py  train_for_identity_thresholds.py  train_validate_pr_auc.py
pipeline/blast/: run_blast.py  (+4 more)
required_data_ec_number_paper/: log_samples_per_label.pkl
src/: pipeline.py  run_data_processing_pipeline.py
(+97 files in other folders)
