[metadata]
name = ec_number_prediction
version = 0.0.3
description = ec_number_prediction
long_description = file: README_pypi.md
long_description_content_type = text/markdown
keywords = plants, secondary metabolism
author = Joao Capela
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.9
zip_safe = False
include_package_data = True
install_requires =
    plants-sm==0.0.2
    luigi
    scikit-multilearn
    matplotlib_venn

dependency_links=[
        'git+https://github.com/samoturk/mol2vec#egg=mol2vec', 'git+https://github.com/reymond-group/map4@v1.0'
    ]

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0

[options.package_data]
plants_sm = py.typed

[flake8]
max-line-length = 160